corrects overflow-x on body

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
 	background-repeat: no-repeat, repeat;
 	background-attachment: local;
 	background-position: center top;
-	overflow: hidden;
+	overflow-x: hidden;
 }
 
 h1 { font-family: "eurostile-extended", sans-serif; }
